# model-traffic-manager

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: ci.yml  e2e-aks.yml  e2e-azure-janitor.yml  integration-azure.yml  release-image.yml  release-validation.yml  semantic-release.yml  validation-nightly.yml
_docs/: CHATBOT_PLATFORM.md  README.md  SaaS-Chatbot-System-Orchiestration.md
_docs/_CHANGELOG/: 1-2026-03-13-repo-governance-task-workflow-and-agents-rules.md  10-2026-03-14-phase-2-status-reconciliation-and-forward-backlog-expansion.md  11-2026-03-14-phase-2-embeddings-proxy-path-and-surface-parity.md  12-2026-03-14-phase-3-managed-identity-outbound-auth-and-token-cache.md  13-2026-03-14-phase-4-multi-upstream-routing-and-tiered-failover.md  14-2026-03-14-phase-5-failure-classification-health-state-cooldown-and-circuit-breaker.md  15-2026-03-14-basic-rate-limiting-and-concurrency-limiting.md  16-2026-03-14-explainable-routing-and-runtime-observability-foundation.md  17-2026-03-14-azure-backed-validation-activation-and-test-harness-scaffolding.md  18-2026-03-14-release-hardening-and-final-task-016-completion.md  (+66 more)
app/: __init__.py
configs/: example.router.yaml  full-capabilities.router.yaml
docker/: Dockerfile  entrypoint.sh
docs/: README.md
infra/: README.md
(+612 files in other folders)
